Fix back arrow alignment

--- a/website/frontend/src/components/pages/Explorer/Explorer.module.scss
+++ b/website/frontend/src/components/pages/Explorer/Explorer.module.scss
@@ -20,6 +20,7 @@
 .search {
   flex: 1;
   display: flex;
+  align-items: center;
   margin-right: 32px;
 
   @include sm {
